@@ -15,10 +15,9 @@
  */
 
 /**
- * This file was created using the `create_project.py` script located in the
- * `<AndroidX root>/development/project-creator` directory.
+ * This file was created using the `createProject` gradle task (./gradlew createProject)
  *
- * Please use that script when creating a new project, rather than copying an existing project and
+ * Please use the task when creating a new project, rather than copying an existing project and
  * modifying its settings.
  */
 import androidx.build.SoftwareType
@@ -30,7 +29,7 @@ plugins {
 
 dependencies {
     implementation(project(":lifecycle:lifecycle-common"))
-    implementation(libs.kotlinStdlib)
+    implementation(libs.guava)
     implementation(libs.autoCommon)
     implementation(libs.javapoet)
     testImplementation(libs.googleCompileTesting)
@@ -57,6 +56,11 @@ sourceSets.test.output.dir(testLibraryJar.map { it.destinationDirectory })
 tasks.withType(Test).configureEach {
     // https://github.com/google/compile-testing/issues/222
     it.jvmArgs "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
+    it.jvmArgs "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED"
+    it.jvmArgs "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+    it.jvmArgs "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED"
+    it.jvmArgs "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED"
+    it.jvmArgs "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"
 }
 
 androidx {
